Report almost final
Signed-off-by: steagap <steagap06@gmail.com>

--- a/project/Notebooks/Milestone2/milestone2_notebook.ipynb
+++ b/project/Notebooks/Milestone2/milestone2_notebook.ipynb
@@ -1314,7 +1314,7 @@
     "\n",
     "We tried though to present our ideas in the best possible way. \n",
     "\n",
-    "***Nevertheless, we managed to obtain useful insights from the swiss tweets dataset. ***"
+    "***Nevertheless, we managed to obtain useful insights from both datasets. ***"
    ]
   },
   {
@@ -1414,7 +1414,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As soon as we extracted the above information, we could continue with the analysis, which is described thoroughly in our website."
+    "As soon as we extracted the above information, we could continue with the analysis, which is described thoroughly in our website.\n",
+    "\n",
+    "Since, the dataset did not provide us with more information about each tweet, we think that our analysis is quite interesting, taking into consideration the time we had to deal with it. Of course, we could have done more if we had more time but we are satisfied with the final analysis! "
    ]
   },
   {
@@ -1479,9 +1481,9 @@
     "\n",
     "We have run the script job_leon_daily_tweets.py (**project/src/analysis/**) to extract the data we need to perform our analysis on the tweets leon dataset.\n",
     "\n",
-    "Unfortunately, a few hours before the submission the cluster runs very slowly, so we are not sure that we will provide the analysis we want on the leon dataset.\n",
+    "Unfortunately, we managed to fetch the amount of data we wanted only some minutes before the submission, even though we tried to do that the previous days, the cluster was almost unresponsive for long periods of time.\n",
     "\n",
-    "The steps that we would use are the same as we did for the swiss tweets."
+    "Finally, since we managed to obtain some data we enriched our analysis based on some assumptions. "
    ]
   },
   {
@@ -1495,7 +1497,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Currently from the leon tweets dataset, we have only done some basic analysis regarding ****the higgs boson**** event, since the cluster has been almost unresponsive from Saturday to Tuesday. "
+    "1. Japan Earthquake & Tsunami\n",
+    "2. Osama Bin Landen killed\n",
+    "3. Muammar Gaddafi killed\n",
+    "4. Mark Duggan police killing, UK riots\n",
+    "5. Steve Jobs dies\n",
+    "6. Kim Jong-il dies\n",
+    "7. Egyptian Revolution, Hosni Mubarak resignation\n",
+    "8. New-Zealand earthquake\n",
+    "9. Royal Wedding\n",
+    "10. Amy Winehouse dies\n",
+    "11. Higgs Boson discovery\n",
+    "12. Houla Massacre in Syria\n",
+    "13. Greek debt crisis\n",
+    "14. 2012 Olympic Games in London\n",
+    "15. Curiosity Lands on Mars\n",
+    "16. Felix Baumgartner sky-dive (Red Bull Stratos)\n",
+    "17. Whitney Houston dies\n",
+    "18. Neil Armstrong dies\n",
+    "19. Shenzhou 9 Chinese spacecraft dock\n",
+    "20. Doomsday - 31st December 2012\n",
+    "21. Pope Francis election\n",
+    "22. Boston Marathon bombing\n",
+    "23. Ghouta, Syria sarin gas attack\n",
+    "24. Nelson Mandela dies\n",
+    "25. Paul Walker dies\n",
+    "26. Harlem Shake\n",
+    "27. Edward Snowden, NSA\n",
+    "28. Oscar Pistorius murders his girlfriend\n",
+    "29. North West (Kim Kardashian + Kanye West)\n",
+    "30. Egyptian coup against Mohamed Morsi\n",
+    "31. Ebola outbreak in West Africa\n",
+    "32. Malaysian Airlines MH370 disappears\n",
+    "33. Malaysian Airlines MH17 shot down\n",
+    "34. FIFA World Cup in Brazil;12/06/2014\n",
+    "35. Robin Williams commits suicide\n",
+    "36. Scotland UK referendum\n",
+    "37. Ferguson shooting\n",
+    "38. Rosetta lands on comet\n",
+    "39. #BreakTheInternet by Kim Kardashian\n",
+    "40. Peshawar school massacre in Pakistan\n",
+    "41. Charlie Hebdo attack In Paris\n",
+    "42. Germanwings plane crash\n",
+    "43. Garissa University College shooting in Kenya\n",
+    "44. Nepal magn. 7.8 and 7.3 earthquakes\n",
+    "45. Greek government-debt crisis\n",
+    "46. Cuba and USA reestablish diplomatic relations\n",
+    "47. Volkswagen scandal\n",
+    "48. Ankara bombings\n",
+    "49. Paris terrorist attacks\n",
+    "50. Climate change pact in Paris\n",
+    "51. SpaceX lands Falcon 9\n",
+    "52. ISIS\n",
+    "53. John Forbes Nash dies\n",
+    "54. Christopher Lee dies\n",
+    "55. Lemmy dies"
    ]
   },
   {
@@ -1524,6 +1580,15 @@
    "metadata": {},
    "source": [
     "#### Chapter 5: Conclusions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The data of the tweets leon dataset did not provide us with many information except for the tweet, so we found the number of tweets for each event per day.\n",
+    "\n",
+    "And we decided to split the events into categories and compare their impact along with time."
    ]
   },
   {
