--- a/project/Notebooks/Milestone2/milestone2_notebook.ipynb
+++ b/project/Notebooks/Milestone2/milestone2_notebook.ipynb
@@ -1287,23 +1287,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Under the URL: https://errikos.github.io/ada-showoff/thedatasets/ we describe some useful insights we found regarding the datasets (leon and swiss tweets), with graphs and plots using Plotly."
+    "**First Steps**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Firstly, we plot the language distribution of swiss tweets (we selected only the languages that exist in both swiss' and leon's datasets).\n",
-    "\n",
-    "\n",
     "The scripts that were used to extract the count numbers exist under the path **project/src/count/**\n",
     "\n",
     "The scripts under the path **project/src/plot/** were used to plot the results obtained from the above  count scripts.\n",
     "\n",
     "In the file event.py (**project/src/analysis/event.py**) we defined the classes Event, EventParser, in order to parse a csv file and create a list of events.\n",
     "\n",
-    "Under the path: **project/src/plots/** we defined the class Plotter in plotter.py and the subclasses TweetsLeonPlotter and SwissTweetsPlotter, which plot language_plots for each dataset. The TweetsLeonPlotter also plots the tweets' monthly counts and the SwissTweetsPlotter the tweets' daily counts."
+    "Under the path: **project/src/plots/** we defined the class Plotter in plotter.py and the subclasses TweetsLeonPlotter and SwissTweetsPlotter, which plot language_plots for each dataset. The TweetsLeonPlotter also plots the tweets' monthly counts and the SwissTweetsPlotter the tweets' daily counts.\n",
+    "\n",
+    "We plot the language distribution of swiss tweets (we selected only the languages that exist in both swiss' and leon's datasets).\n",
+    "\n",
+    "Under the URL: https://errikos.github.io/ada-showoff/thedatasets/ we describe some useful insights we found regarding the datasets (leon and swiss tweets), with graphs and plots using Plotly."
    ]
   },
   {
@@ -1314,7 +1315,7 @@
     "\n",
     "We tried though to present our ideas in the best possible way. \n",
     "\n",
-    "***Nevertheless, we managed to obtain useful insights from both datasets. ***"
+    "***Finally, we managed to obtain useful insights from both datasets. ***"
    ]
   },
   {
@@ -1423,27 +1424,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Chapter 2: Observations about events that occured in the same month"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Chapter 3: Observations about events that occured in the same year"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Chapter 4: Conclusions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Section 2: Global tweets dataset analysis"
    ]
   },
@@ -1479,11 +1459,16 @@
    "source": [
     "- job_leon_daily_tweets.py\n",
     "\n",
-    "We have run the script job_leon_daily_tweets.py (**project/src/analysis/**) to extract the data we need to perform our analysis on the tweets leon dataset.\n",
-    "\n",
+    "We have run the script job_leon_daily_tweets.py (**project/src/analysis/**) to extract the data we need to perform our analysis on the tweets leon dataset."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Unfortunately, we managed to fetch the amount of data we wanted only some minutes before the submission, even though we tried to do that the previous days, the cluster was almost unresponsive for long periods of time.\n",
     "\n",
-    "Finally, since we managed to obtain some data we enriched our analysis based on some assumptions. "
+    "Nevertheless, since we managed to obtain some data we enriched our analysis based on some assumptions. "
    ]
   },
   {
@@ -1558,37 +1543,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Chapter 2: Observations about events that occured in the same month"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Chapter 3: Observations about events that occured in the same year"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Chapter 4: Observations about events that occured in different years"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Chapter 5: Conclusions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "The data of the tweets leon dataset did not provide us with many information except for the tweet, so we found the number of tweets for each event per day.\n",
     "\n",
-    "And we decided to split the events into categories and compare their impact along with time."
+    "And we decided to split the events into categories (well-known people deaths, loss of life, scientific and political events, sports, non-significant events) and compare their impact along with time."
    ]
   },
   {
