--- a/project/Notebooks/Milestone2/milestone2_notebook.ipynb
+++ b/project/Notebooks/Milestone2/milestone2_notebook.ipynb
@@ -1370,14 +1370,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Chapter 1: Decide on final lists of event categories and specific events to be examined"
+    "#### Chapter 1: Final lists of event categories and specific events to be examined"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**The final list of events (data/swiss/events/events.csv):**\n",
+    "The final list of events **(data/swiss/events/events.csv):**\n",
     "\n",
     "1. Zika virus outbreak\n",
     "2. North Korea rocket launch\n",
@@ -1475,13 +1475,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Chapter 1: Decide on final lists of event categories and specific events to be examined"
+    "#### Chapter 1: Final lists of event categories and specific events to be examined"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The final list of events **(data/leon/events/events.csv):**\n",
+    "\n",
     "1. Japan Earthquake & Tsunami\n",
     "2. Osama Bin Landen killed\n",
     "3. Muammar Gaddafi killed\n",
@@ -1515,7 +1517,7 @@
     "31. Ebola outbreak in West Africa\n",
     "32. Malaysian Airlines MH370 disappears\n",
     "33. Malaysian Airlines MH17 shot down\n",
-    "34. FIFA World Cup in Brazil;12/06/2014\n",
+    "34. FIFA World Cup in Brazil\n",
     "35. Robin Williams commits suicide\n",
     "36. Scotland UK referendum\n",
     "37. Ferguson shooting\n",
@@ -1543,7 +1545,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The data of the tweets leon dataset did not provide us with many information except for the tweet, so we found the number of tweets for each event per day.\n",
+    "The data of the tweets leon dataset did not provide us with many information except for the tweet, so we used for our analysis the number of tweets for each event per day.\n",
     "\n",
     "And we decided to split the events into categories (well-known people deaths, loss of life, scientific and political events, sports, non-significant events) and compare their impact along with time."
    ]
