--- a/project/Notebooks/Milestone2/milestone2_notebook.ipynb
+++ b/project/Notebooks/Milestone2/milestone2_notebook.ipynb
@@ -1370,7 +1370,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Chapter 1: Final lists of event categories and specific events to be examined"
+    "#### Final lists of event categories and specific events to be examined"
    ]
   },
   {
@@ -1475,7 +1475,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Chapter 1: Final lists of event categories and specific events to be examined"
+    "#### Final lists of event categories and specific events to be examined"
    ]
   },
   {
